# SEAF

./: .gitignore  README.md  elu_la_ld_s7.csv  gelu_la_ld_s6.csv  iron_new_testing.txt  iron_testing.txt  ppnlp_test.txt  ppnlp_test_new.txt  preds.csv  sigmoid_la_ld_s6.csv  tanh_la_ld_s6.csv
SCI/: README.md
SCI/cmake/: SCIConfig.cmake
SCI/src/BuildingBlocks/: aux-protocols.cpp  aux-protocols.h  truncation.cpp  truncation.h  value-extension.cpp  value-extension.h
SCI/src/FloatingPoint/: fixed-point.cpp  fp-math.cpp  fp-math.h
SCI/src/LinearHE/: CMakeLists.txt
SCI/src/Math/: math-functions.cpp  math-functions.h
SCI/src/Millionaire/: millionaire.h
SCI/tests/: CMakeLists.txt
SCI/tests/activation/: CMakeLists.txt  bolt_gelu.cpp  bolt_gelu_new.cpp  bolt_tanh.cpp  iron_gelu.cpp
SCI/tests/bert_bolt/: CMakeLists.txt  bert.cpp  bert.h  bolt_bert.cpp  bolt_bert_SEAF.cpp  bolt_bert_new.cpp  bolt_bert_word_elimination.cpp  nonlinear.cpp  nonlinear.h
SCI/tests/bert_iron/: CMakeLists.txt  bert.cpp  bert.h  iron_bert.cpp  iron_bert_SEAF.cpp  iron_bert_new.cpp  nonlinear.cpp  nonlinear.h
SCI/tests/tests/: CMakeLists.txt  auto_compare(no_padding)_test_output_320Mbps_80ms.csv  auto_compare_eq_test_output.csv  auto_compare_eq_test_output_3016Mbps_0.4ms.csv  auto_compare_eq_test_output_320Mbps_80ms.csv  auto_compare_test_output_3016Mbps_0.4ms.csv  auto_compare_test_output_320Mbps_80ms.csv  auto_eq_test_output_3016Mbps_0.4ms.csv  auto_eq_test_output_320Mbps_80ms.csv  test_float_primitive.cpp  test_ring_12_22_GELU_final.cpp  test_ring_12_23_ELU_final.cpp  test_ring_12_24_tanh_final.cpp  test_ring_12_25_sigmoid_final.cpp  test_ring_1_1_GELU_muilt_threads.cpp  test_ring_1_7_Tanh_muilt_threads.cpp  test_ring_1_8_ELU_muilt_threads.cpp  test_ring_1_8_sigmoid_muilt_threads.cpp  test_ring_ABSMUX.cpp  test_ring_PosandNeg_l21_la6.cpp  test_ring_PosandNeg_l21_la6_test.cpp  test_ring_auto_test.cpp  test_ring_aux_protocols.cpp  test_ring_clear_l21_la6.cpp  test_ring_floattest.cpp  test_ring_gelu_new.cpp  test_ring_interval.cpp  test_ring_l21_la12.cpp  test_ring_l21_la6.cpp  test_ring_matmul.cpp  test_ring_max_distance.cpp  test_ring_million.cpp  test_ring_multest.cpp  test_ring_papertest.cpp  test_ring_sigmoid.cpp  test_ring_single_test.cpp  test_ring_tanh.cpp  test_ring_test_ring_1_8_sigmoid_muilt_threads.cpp  test_ring_three_division.cpp  test_ring_threeinterval.cpp
quantize/mrpc/weights_txt/: bert.encoder.layer.0.attention.output.LayerNorm.bias.txt  bert.encoder.layer.0.attention.output.LayerNorm.weight.txt  bert.encoder.layer.0.attention.output.dense.bias.txt  bert.encoder.layer.0.attention.output.dense.weight.txt  bert.encoder.layer.0.attention.self.key.bias.txt  bert.encoder.layer.0.attention.self.key.weight.txt  bert.encoder.layer.0.attention.self.query.bias.txt  bert.encoder.layer.0.attention.self.query.weight.txt  bert.encoder.layer.0.attention.self.value.bias.txt  bert.encoder.layer.0.attention.self.value.weight.txt  bert.encoder.layer.0.intermediate.dense.bias.txt  bert.encoder.layer.0.output.LayerNorm.bias.txt  bert.encoder.layer.0.output.LayerNorm.weight.txt  bert.encoder.layer.0.output.dense.bias.txt  bert.encoder.layer.1.attention.output.LayerNorm.bias.txt  bert.encoder.layer.1.attention.output.LayerNorm.weight.txt  bert.encoder.layer.1.attention.output.dense.bias.txt  bert.encoder.layer.1.attention.output.dense.weight.txt  bert.encoder.layer.1.attention.self.key.bias.txt  bert.encoder.layer.1.attention.self.key.weight.txt  bert.encoder.layer.1.attention.self.query.bias.txt  bert.encoder.layer.1.attention.self.query.weight.txt  bert.encoder.layer.1.attention.self.value.bias.txt  bert.encoder.layer.1.attention.self.value.weight.txt  bert.encoder.layer.1.intermediate.dense.bias.txt  bert.encoder.layer.1.output.LayerNorm.bias.txt  bert.encoder.layer.1.output.LayerNorm.weight.txt  bert.encoder.layer.1.output.dense.bias.txt  bert.encoder.layer.10.attention.output.LayerNorm.bias.txt  bert.encoder.layer.10.attention.output.LayerNorm.weight.txt  bert.encoder.layer.10.attention.output.dense.bias.txt  bert.encoder.layer.10.attention.output.dense.weight.txt  bert.encoder.layer.10.attention.self.key.weight.txt  bert.encoder.layer.10.attention.self.query.bias.txt  bert.encoder.layer.10.attention.self.query.weight.txt  bert.encoder.layer.10.attention.self.value.bias.txt  bert.encoder.layer.10.attention.self.value.weight.txt  bert.encoder.layer.10.intermediate.dense.bias.txt  bert.encoder.layer.10.output.LayerNorm.bias.txt  bert.encoder.layer.10.output.LayerNorm.weight.txt  (+556 more)
quantize/rte/weights_txt/: bert.encoder.layer.0.attention.output.LayerNorm.bias.txt  bert.encoder.layer.0.attention.output.LayerNorm.weight.txt  bert.encoder.layer.0.attention.output.dense.bias.txt  bert.encoder.layer.0.attention.output.dense.weight.txt  bert.encoder.layer.0.attention.self.key.weight.txt  bert.encoder.layer.0.attention.self.query.bias.txt  bert.encoder.layer.0.attention.self.query.weight.txt  bert.encoder.layer.0.attention.self.value.bias.txt  bert.encoder.layer.0.attention.self.value.weight.txt  bert.encoder.layer.0.intermediate.dense.bias.txt  bert.encoder.layer.0.output.LayerNorm.bias.txt  bert.encoder.layer.0.output.LayerNorm.weight.txt  (+458 more)
quantize/sst-2/weights_txt/: b_scale.txt  (+1057 more)
(+1685 files in other folders)
